Made the bot a bit more cool it now tells your horoscope

--- a/AngieBot/Web.config
+++ b/AngieBot/Web.config
@@ -6,9 +6,9 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="BotId" value="AngieBot" />
+    <add key="MicrosoftAppId" value="2dc3959c-dd37-4996-b60d-262da9f1f415" />
+    <add key="MicrosoftAppPassword" value="iSSKcaC4VHAowobUTddO5ja" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
